Add color-coded calendar with legend and image preview in post detail modal

--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,24 @@
             <section class="card card-calendar">
                 <div class="card-header">
                     <h2>📅 Calendario de Contenido</h2>
+                    <div class="calendar-legend">
+                        <div class="legend-item">
+                            <div class="legend-dot feed"></div>
+                            <span>Feed</span>
+                        </div>
+                        <div class="legend-item">
+                            <div class="legend-dot story"></div>
+                            <span>Story</span>
+                        </div>
+                        <div class="legend-item">
+                            <div class="legend-dot reel"></div>
+                            <span>Reel</span>
+                        </div>
+                        <div class="legend-item">
+                            <div class="legend-dot carousel"></div>
+                            <span>Carrusel</span>
+                        </div>
+                    </div>
                     <div class="card-actions">
                         <button class="btn-icon" onclick="prevMonth()">
                             <span class="icon">←</span>
