--- a/public/index.html
+++ b/public/index.html
@@ -282,8 +282,8 @@
         </div>
     </div>
 
-    <script src="settings.js"></script>
-    <script src="calendar.js"></script>
-    <script src="app.js"></script>
+    <script src="settings.js?v=2"></script>
+    <script src="calendar.js?v=2"></script>
+    <script src="app.js?v=2"></script>
 </body>
 </html>
