--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600;700&family=Outfit:wght@300;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css?v=3">
-    <script src="auth.js"></script>
+    <link rel="stylesheet" href="styles.css?v=4">
+    <script src="auth.js?v=4"></script>
 </head>
 <body>
     <div class="container">
@@ -265,8 +265,8 @@
         </div>
     </div>
 
-    <script src="settings.js?v=3"></script>
-    <script src="calendar.js?v=3"></script>
-    <script src="app.js?v=3"></script>
+    <script src="settings.js?v=4"></script>
+    <script src="calendar.js?v=4"></script>
+    <script src="app.js?v=4"></script>
 </body>
 </html>
