Replace maple leaf emoji with FofoStudio SVG logo

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,9 @@
         <header class="header">
             <div class="header-content">
                 <div class="logo">
-                    <div class="logo-icon">🍁</div>
+                    <div class="logo-icon">
+                        <img src="fofostudio-logo.svg" alt="FofoStudio Logo" class="logo-svg">
+                    </div>
                     <div class="logo-text">
                         <h1>FofoStudio</h1>
                         <span>Centro de Control Inteligente</span>
